--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.udacity.android.popularmoviess1"
-        minSdkVersion 21
+        minSdkVersion 22
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -40,12 +40,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //Adding TheMovieDB API to simplify ReST call and receive response
+    // Picasso api to load and cache images
+
+    //compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
-    //Adding TheMovieDB API to simplify ReST call and receive response
+    compile 'com.android.support:support-core-utils:25.1.1'
     compile 'info.movito:themoviedbapi:1.4'
-    // Picasso api to load and cache images
     compile 'com.squareup.picasso:picasso:2.5.2'
-
+    compile 'com.android.support:support-v4:25.1.1'
     testCompile 'junit:junit:4.12'
 }
