--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.udacity.android.popularmoviess1"
+        applicationId "com.udacity.android.tmdb"
         minSdkVersion 22
         targetSdkVersion 25
         versionCode 1
@@ -19,7 +19,7 @@ android {
         // added to handle api key outside java code, include api key from gradle.properties
         // this will generate BuildConfig.java with TMDB_API_KEY variable
         buildTypes.each {
-            it.buildConfigField 'String', 'TMDB_API_KEY', TmDBApiKey
+            it.buildConfigField 'String', 'TMDB_API_KEY', TMDBApiKey
         }
     }
 
@@ -40,9 +40,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     //Adding TheMovieDB API to simplify ReST call and receive response
     // Picasso api to load and cache images
-
     //compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
