--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,16 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     // library to reduce boilerplate code
+    
+    
+    // memory leak
+
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
     testCompile 'junit:junit:4.12'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
