--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,10 @@ android {
 
             // memory leak
 
+            compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+            // https://mvnrepository.com/artifact/com.google.code.gson/gson
+            compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 
             // favorite button https://github.com/IvBaranov/MaterialFavoriteButton
             compile 'com.github.ivbaranov:materialfavoritebutton:0.1.4'
@@ -72,4 +76,3 @@ android {
         }
     }
 }
-
